# taipy_person_finder

./: .pre-commit-config.yaml  README.md  dockerfile  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: main.yml
create_data/: create_fake_data.py
src/: main.py
src/algorithms/: __init__.py  file_and_model_selection.py  normalize_name.py  similarity_score.py  similarity_score_person.py
src/algorithms/sql/: compare_names.sql.j2  find_person.sql.j2
src/callbacks/: find_people_callbacks.py  look_for_person_callback.py
src/css/: main.css
src/pages/: __init__.py  find_people.py  find_person.py  root.py
tests/: test_query_runner.py  test_query_two_files.py
