[project]
name = "taipy-person-finder"
version = "0.1.0"
description = "An application that performs person search using Jaro-Winkler similarity scores, as well as other string similarity methods."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb==1.4.3",
    "faker==40.1.2",
    "marimo==0.18.4",
    "taipy==4.1.0",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.1",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.0",
    "ruff>=0.14.12",
]
